--- a/scopes/component/ui/version-block/version-block.module.scss
+++ b/scopes/component/ui/version-block/version-block.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    border-right: 1px solid var(--border-color);
+    border-right: 1px solid var(--bit-border-color-lightest);
     padding-right: 22px;
     padding-left: 10px;
     padding-top: 24px;
@@ -21,7 +21,7 @@
 }
 .link {
   text-decoration: none;
-  color: var(--text-highlighted);
+  color: var(--bit-text-color-heavyed);
   font-size: 14px;
   margin-bottom: 8px;
   &:hover {
@@ -34,7 +34,7 @@
   margin-bottom: 45px;
   max-width: 700px;
   .versionTitle {
-    color: var(--base-color);
+    color: var(--bit-accent-color);
     font-weight: unset;
     margin-bottom: 10px;
   }
@@ -52,7 +52,7 @@
 .emptyMessage {
   font-size: 15px;
   font-style: italic;
-  color: var(--text-muted);
+  color: var(--bit-text-color-light);
 }
 
 .placeholder {
