--- a/scopes/defender/tester/ui/tests-page.module.scss
+++ b/scopes/defender/tester/ui/tests-page.module.scss
@@ -8,7 +8,7 @@
 
   .title {
     margin-bottom: 24px;
-    font-size: var(--h-xs);
+    font-size: var(--bit-h-xs);
   }
   .separator {
     margin-bottom: 41px;
