--- a/scopes/design/ui/elements/level-icon/level-icon.module.scss
+++ b/scopes/design/ui/elements/level-icon/level-icon.module.scss
@@ -2,7 +2,7 @@
   font-weight: bold;
   text-align: center;
 
-  color: var(--base-color);
+  color: var(--bit-accent-color);
 
   &:before {
     // color for transparent content
