--- a/scopes/design/ui/label/label.module.scss
+++ b/scopes/design/ui/label/label.module.scss
@@ -1,7 +1,7 @@
 .label {
   display: inline-block;
-  color: var(--base-highlight);
-  background: var(--muted-color);
+  color: var(--bit-accent-heavy);
+  background: var(--bit-accent-bg);
 
   padding: 8px 16px;
   border-radius: 7px;
