--- a/scopes/design/ui/message-card/message-card.module.scss
+++ b/scopes/design/ui/message-card/message-card.module.scss
@@ -1,5 +1,5 @@
 .messageCard {
-  border: 1px solid var(--border-color, #ededed);
+  border: 1px solid var(--bit-border-color-lightest, #ededed);
   padding: 20px;
   display: flex;
 }
