--- a/scopes/design/ui/pill-label/pill-label.module.scss
+++ b/scopes/design/ui/pill-label/pill-label.module.scss
@@ -7,7 +7,7 @@
   width: fit-content;
   padding: 2px 8px;
   text-transform: capitalize;
-  border-color: var(--border-color);
-  color: var(--text-muted);
-  font-size: var(--p-xs);
+  border-color: var(--bit-border-color-lightest);
+  color: var(--bit-text-color-light);
+  font-size: var(--bit-p-xs);
 }
