--- a/scopes/design/ui/surfaces/menu/section/section.module.scss
+++ b/scopes/design/ui/surfaces/menu/section/section.module.scss
@@ -1,7 +1,7 @@
 .menuSection {
   padding: 16px 0;
-  border-bottom: 1px solid var(--border-color);
-  font-size: var(--p-xs);
+  border-bottom: 1px solid var(--bit-border-color-lightest);
+  font-size: var(--bit-p-xs);
 }
 
 // `> *` doesn't add specificity, so adding 'div' instead
