--- a/scopes/react/component-highlighter/component-highlighter/component-highlighter.module.scss
+++ b/scopes/react/component-highlighter/component-highlighter/component-highlighter.module.scss
@@ -1,5 +1,5 @@
 .highlighter {
-  border: solid var(--border-color, #ededed);
+  border: solid var(--bit-border-color-lightest, #ededed);
   border-width: 0px;
   box-sizing: border-box;
   height: 100%;
