--- a/scopes/scope/scope/ui/menu/menu.module.scss
+++ b/scopes/scope/scope/ui/menu/menu.module.scss
@@ -1,4 +1,4 @@
 .scopMenu {
-  background-color: var(--bg-color, #ffffff);
-  border-bottom: 1px solid var(--border-color, #ededed);
+  background-color: var(--bit-bg-color, #ffffff);
+  border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
 }
