--- a/scopes/workspace/ui/load-preview/load-preview.module.scss
+++ b/scopes/workspace/ui/load-preview/load-preview.module.scss
@@ -8,11 +8,11 @@
   font-size: 12px;
   border-radius: 6px;
   color: var(--primary-label-text);
-  background-color: var(--text-color);
+  background-color: var(--bit-text-color);
   padding: 4px 8px;
   transition: background-color 300ms ease-in-out;
   &:hover {
-    background-color: var(--text-highlight);
+    background-color: var(--bit-text-color-heavy);
   }
   .icon {
     margin-right: 5px;
