--- a/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
+++ b/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
@@ -9,10 +9,10 @@
 .codeTabDrawer {
   > div:first-child {
     border: none;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--bit-border-color-lightest);
   }
   > div:last-child {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--bit-border-color-lightest);
   }
 }
 
