--- a/scopes/design/ui/owner-avatar/owner-avatar.module.scss
+++ b/scopes/design/ui/owner-avatar/owner-avatar.module.scss
@@ -1,5 +1,5 @@
 .isOwner {
-  border: 2px solid var(--steel-color, #878c9a);
+  border: 2px solid var(--bit-border-color-heavy, #878c9a);
   padding: 2px;
   border-radius: 50%;
 }
