--- a/scopes/design/ui/server-error-page/server-error-page.module.scss
+++ b/scopes/design/ui/server-error-page/server-error-page.module.scss
@@ -11,7 +11,7 @@
     font-size: 24px;
   }
   .github {
-    color: var(--text-highlight);
+    color: var(--bit-text-color-heavy);
   }
   .slack {
     display: flex;
@@ -19,7 +19,7 @@
     justify-content: center;
     font-size: 16px;
     color: var(--cta-button-text);
-    background-color: var(--slack-bg, #222022);
+    background-color: var(--bit-slack-bg, #222022);
   }
 }
 
