--- a/scopes/mdx/ui/create-heading/create-heading.module.scss
+++ b/scopes/mdx/ui/create-heading/create-heading.module.scss
@@ -14,7 +14,7 @@
   }
 
   &.mainHeadingStyles {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--bit-border-color-lightest);
     padding-bottom: 8px;
   }
 
