--- a/scopes/mdx/ui/link/link.module.scss
+++ b/scopes/mdx/ui/link/link.module.scss
@@ -1,8 +1,8 @@
 .link {
-  color: var(--base-color);
+  color: var(--bit-accent-color);
   text-decoration: none;
   &:hover {
-    color: var(--base-highlight);
+    color: var(--bit-accent-heavy);
     text-decoration: underline;
   }
 }
