--- a/scopes/scope/ui/scope-title/scope-title.module.scss
+++ b/scopes/scope/ui/scope-title/scope-title.module.scss
@@ -10,6 +10,6 @@
 }
 .orgName {
   font-weight: normal;
-  color: var(--text-highlight);
+  color: var(--bit-text-color-heavy);
   font-weight: bold;
 }
