--- a/scopes/design/ui/surfaces/menu/item/item.module.scss
+++ b/scopes/design/ui/surfaces/menu/item/item.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 8px;
   text-decoration: none;
-  color: var(--highlighted-text);
+  color: var(--bit-text-color-heavy);
 
   .icon {
     color: var(--bit-text-color-light);
