--- a/scopes/explorer/command-bar/ui/autocomplete-input/autocomplete-input.module.scss
+++ b/scopes/explorer/command-bar/ui/autocomplete-input/autocomplete-input.module.scss
@@ -8,6 +8,6 @@
   outline: none;
 
   &::placeholder {
-    color: var(--text-placeholder-color, #babec9);
+    color: var(--bit-text-inactive, #babec9);
   }
 }
