--- a/scopes/workspace/ui/load-preview/load-preview.module.scss
+++ b/scopes/workspace/ui/load-preview/load-preview.module.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
   font-size: 12px;
   border-radius: 6px;
-  color: var(--primary-label-text);
+  color: var(--bit-text-on-accent);
   background-color: var(--bit-text-color);
   padding: 4px 8px;
   transition: background-color 300ms ease-in-out;
