--- a/scopes/design/ui/server-error-page/server-error-page.module.scss
+++ b/scopes/design/ui/server-error-page/server-error-page.module.scss
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    color: var(--cta-button-text);
+    color: var(--bit-text-on-accent);
     background-color: var(--bit-slack-bg, #222022);
   }
 }
