--- a/scopes/design/ui/not-found-page/not-found-page.module.scss
+++ b/scopes/design/ui/not-found-page/not-found-page.module.scss
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    color: var(--bit-text-on-accent);
+    color: var(--bit-text-on-accent, #ffffff);
     background-color: var(--bit-slack-bg, #222022);
   }
 }
