Apply suggestions from code review
Co-authored-by: Oded Reuveny <oded@bit.dev>

--- a/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
+++ b/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
@@ -9,7 +9,7 @@
 .codeTabDrawer {
   > div:first-child {
     border: none;
-    border-bottom: 1px solid var(--bit-border-color-lightest);
+    border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   }
   > div:last-child {
     border-bottom: 1px solid var(--bit-border-color-lightest);
