update css vars (#4428)
- update all relevant css variables to new name
- update all deps from base-ui, evangelist, documenter and design
- replace color palette with accent-color

--- a/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
+++ b/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
@@ -9,10 +9,10 @@
 .codeTabDrawer {
   > div:first-child {
     border: none;
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   }
   > div:last-child {
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid var(--bit-border-color-lightest);
   }
 }
 
