--- a/scopes/design/ui/not-found-page/not-found-page.module.scss
+++ b/scopes/design/ui/not-found-page/not-found-page.module.scss
@@ -11,15 +11,15 @@
     font-size: 24px;
   }
   .github {
-    color: var(--text-highlight);
+    color: var(--bit-text-color-heavy);
   }
   .slack {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    color: var(--cta-button-text);
-    background-color: var(--slack-bg, #222022);
+    color: var(--bit-text-on-accent, #ffffff);
+    background-color: var(--bit-slack-bg, #222022);
   }
 }
 
