rename left over css vars

--- a/scopes/ui-foundation/use-box/menu/menu.module.scss
+++ b/scopes/ui-foundation/use-box/menu/menu.module.scss
@@ -6,7 +6,7 @@
 .title {
   display: flex;
   align-items: center;
-  font-size: var(--p-xs);
+  font-size: var(--bit-p-xs);
   font-weight: bold;
   margin-bottom: 12px;
   > span {
